0.8dev: Prevent ticket summary field from collapsing when empty. Fixes #645.
git-svn-id: https://svn.apache.org/repos/asf/bloodhound/trunk@1517734 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -374,6 +374,10 @@ h1, h2, h3, h4 {
  page-break-after: avoid;
 }
 
+h1, h2, h3 {
+ min-height: 40px;
+}
+
 .clip, .affix .clip-affix {
  overflow: hidden;
  text-overflow: ellipsis;
